		random order, so simply put some .mp3 or .ogg there)
-enabled Tile engine code again
-fixed some bugs in the blitting routines
-fixed some more small bugs I introduced while porting
-Added new keyboard handling code
-fixed lots of code that assumed a key scancode is "only" a char
-added possibility to switch windows/fullscreen mode on ALT+ENTER

7-Sep-2003 by Matze Braun
-removed NetMessageLog class (because it only contained shit ;-)
-slightly changed NetworkServer and NetworkClient interfaces
-Added a SDL_Net version of the network code
-cleaned up socket code alot, by removing all this UDP code (a complete new
 and clean network code will be needed sometime anyway...)
-more cleanup in the network code
-added a client version of the SDLNet code
-replaced all FUBARs with throw Exception, so I could remove terminate.cpp

6-Sep-2003 by Matze Braun
-added a unix implementation of _findfirst, _findnext and _findclose
-removed some getDrive functions, was never used and supporting drives in unix
 is hard :)
-we still need a big commit to replace all \\ in paths with /
-added a fastly hacked configure script (no autoconf yet)
-randomly replaced some \\ in pathnames with /
-More news on my crusade against codewiz.hpp:
  *removed some unused stuff from codewiz.hpp and terminate.cpp
  *added new but alot simpler logging functions to Log.hpp
-replaced all \\ in paths with / (gotta love sed). Yes, I made sure that I only
 change paths (I looked at the list of stuff I change, before applying the sed
 command)
-added Stub for SDLSound implementation
-added a basic SDL Event loop
-fixed more small issues
=> the main menu is displayed now and the Exit and Options buttons work :)
-added a unix verison of _splitpath
-some code cleanups:
 *removed JoystickInterface completely
 *removed netPanzerGlobals.*
 *removed netPanzerMain.*

------------
prior changes (not complete)
............

-Added very basic makefile