@@ -31,7 +31,7 @@ int FileUtil::mkdir(const char* name)
 #ifdef WIN32
 	return ::mkdir(name);
 #else
-	return ::mkdir(name, 0x0755);
+	return ::mkdir(name, S_IRWXU);
 #endif
 }
 
