@@ -7,6 +7,8 @@
 -Added new keyboard handling code
 -fixed lots of code that assumed a key scancode is "only" a char
 -added possibility to switch windows/fullscreen mode on ALT+ENTER
+-fixed some smaller bugs in Splitpath and FileUtil
+-added an fps counter to the info window
 
 7-Sep-2003 by Matze Braun
 -removed NetMessageLog class (because it only contained shit ;-)
